# deimos_deps

./: .gitignore  CMakeLists.txt
SDL_image-1.2.12/: CMakeLists.txt
SDL_image-1.2.12/VisualC/: SDL_image.sln  SDL_image.vcxproj  SDL_image.vcxproj.filters  UpgradeLog.htm
SDL_image-1.2.12/VisualC/showimage/: showimage.vcxproj  showimage.vcxproj.filters
glew-1.10.0/: CMakeLists.txt
project/visual2013/: Deimos Dependencies.sln
project/visual2013/SDL Image/: SDL Image.vcxproj  SDL Image.vcxproj.filters
project/visual2013/glew/: glew.vcxproj  glew.vcxproj.filters
